# Kmeans

./: CMakeLists.txt  cluster.h  example.txt  kmeans.c  kmeans.h  setup.py  spkmeans.c  spkmeans.h  spkmeans.py  spkmeansmodule.c  spkmeansmodule.h  utils.c  utils.h
goal_implementations/: ddg.c  ddg.h  jacobi.c  jacobi.h  lnorm.c  lnorm.h  spk.c  spk.h  wam.c  wam.h
python_goal_implementations/: ddg.py  lnorm.py  wam.py
tests/: input_1_small.txt
